--- a/YoutubeDataAnalysis/main.ipynb
+++ b/YoutubeDataAnalysis/main.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import re"
    ]
   },
   {
@@ -45,7 +46,8 @@
     "    extracted_data.append(entry_data)\n",
     "\n",
     "# Create a DataFrame from the extracted data\n",
-    "df = pd.DataFrame(extracted_data)\n"
+    "df = pd.DataFrame(extracted_data)\n",
+    "df['video_id'] = df['titleUrl'].apply(lambda x: re.search(r'.*v=([^&]+)', x).group(1) if re.search(r'.*v=([^&]+)', x) else None)\n"
    ]
   },
   {
@@ -166,9 +168,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
