--- a/YoutubeDataAnalysis/main.ipynb
+++ b/YoutubeDataAnalysis/main.ipynb
@@ -75,6 +75,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to convert ISO 8601 duration to minutes\n",
+    "def convert_duration_to_minutes(duration):\n",
+    "    import re\n",
+    "    match = re.match(r'PT(?:(\\d+)M)?(?:(\\d+)S)?', duration)\n",
+    "    minutes = int(match.group(1) or 0)\n",
+    "    seconds = int(match.group(2) or 0)\n",
+    "    return minutes + seconds / 60"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
@@ -121,13 +136,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Version 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Version 2\n",
-    "\n",
     "# Steps\n",
     "# 1. Read the video_ids from the csv file\n",
     "# 2. Create a set of video_ids from video_ids.csv and read the video_metadata from the csv file and create a set of video_ids from that\n",
@@ -31898,6 +31918,363 @@
    "source": [
     "df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Anaylsis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ast\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import streamlit as st"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_video_metadata_new = pd.read_csv('/Users/saisandeep/GitRepo/musical-eureka/YoutubeDataAnalysis/Data/video_metadata_new.csv',header=0)\n",
+    "df_watch_history = pd.read_csv('/Users/saisandeep/GitRepo/musical-eureka/YoutubeDataAnalysis/Data/watch_history.csv',header=0)\n",
+    "df_final = df_watch_history.merge(df_video_metadata_new,left_on='video_id',right_on='id',how='left',suffixes=('_watch_history','_video_metadata'))\n",
+    "df_final = df_final.dropna(subset=['video_id'])\n",
+    "df_final = df_final.drop_duplicates(subset=['time','video_id'])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>header</th>\n",
+       "      <th>title_watch_history</th>\n",
+       "      <th>titleUrl</th>\n",
+       "      <th>subtitles</th>\n",
+       "      <th>time</th>\n",
+       "      <th>products</th>\n",
+       "      <th>activityControls</th>\n",
+       "      <th>video_id</th>\n",
+       "      <th>watch_date</th>\n",
+       "      <th>id</th>\n",
+       "      <th>title_video_metadata</th>\n",
+       "      <th>description</th>\n",
+       "      <th>publishedAt</th>\n",
+       "      <th>channelId</th>\n",
+       "      <th>channelTitle</th>\n",
+       "      <th>viewCount</th>\n",
+       "      <th>likeCount</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>privacyStatus</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>YouTube Music</td>\n",
+       "      <td>Watched Take Me To Church</td>\n",
+       "      <td>https://music.youtube.com/watch?v=JKlYOUfviXM</td>\n",
+       "      <td>Hozier - Topic</td>\n",
+       "      <td>2024-07-20 06:44:15.248000+00:00</td>\n",
+       "      <td>YouTube</td>\n",
+       "      <td>YouTube watch history</td>\n",
+       "      <td>JKlYOUfviXM</td>\n",
+       "      <td>2024-07-20</td>\n",
+       "      <td>JKlYOUfviXM</td>\n",
+       "      <td>Take Me To Church</td>\n",
+       "      <td>Provided to YouTube by Universal Music Group\\n...</td>\n",
+       "      <td>2018-07-26T02:50:43Z</td>\n",
+       "      <td>UCA3Zs9A2IeetfGT3Omi9ivw</td>\n",
+       "      <td>Hozier - Topic</td>\n",
+       "      <td>154386360.0</td>\n",
+       "      <td>1307916.0</td>\n",
+       "      <td>PT4M2S</td>\n",
+       "      <td>public</td>\n",
+       "      <td>['Hozier', 'ホージア', 'Take Me To Church']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>YouTube</td>\n",
+       "      <td>Watched Memes I Found On The internet🤣 part 50...</td>\n",
+       "      <td>https://www.youtube.com/watch?v=wgVNUAm5WOc</td>\n",
+       "      <td>Wtf Bro!! Clips</td>\n",
+       "      <td>2024-07-20 05:52:12.901000+00:00</td>\n",
+       "      <td>YouTube</td>\n",
+       "      <td>YouTube watch history</td>\n",
+       "      <td>wgVNUAm5WOc</td>\n",
+       "      <td>2024-07-20</td>\n",
+       "      <td>wgVNUAm5WOc</td>\n",
+       "      <td>Memes I Found On The internet🤣 part 50 #shorts...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023-12-04T14:30:29Z</td>\n",
+       "      <td>UCwZahaEiDZX3uHBF-a6-n9Q</td>\n",
+       "      <td>Wtf Bro!! Clips</td>\n",
+       "      <td>6741236.0</td>\n",
+       "      <td>429123.0</td>\n",
+       "      <td>PT1M</td>\n",
+       "      <td>public</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>YouTube Music</td>\n",
+       "      <td>Watched Stressed Out</td>\n",
+       "      <td>https://music.youtube.com/watch?v=K1FlAphL2p8</td>\n",
+       "      <td>Twenty One Pilots - Topic</td>\n",
+       "      <td>2024-07-20 06:40:52.742000+00:00</td>\n",
+       "      <td>YouTube</td>\n",
+       "      <td>YouTube watch history</td>\n",
+       "      <td>K1FlAphL2p8</td>\n",
+       "      <td>2024-07-20</td>\n",
+       "      <td>K1FlAphL2p8</td>\n",
+       "      <td>Stressed Out</td>\n",
+       "      <td>Provided to YouTube by Fueled By Ramen\\n\\nStre...</td>\n",
+       "      <td>2017-02-09T12:10:05Z</td>\n",
+       "      <td>UCnX0L9QiftAcWdzeBx31xCw</td>\n",
+       "      <td>Twenty One Pilots - Topic</td>\n",
+       "      <td>450802011.0</td>\n",
+       "      <td>4263799.0</td>\n",
+       "      <td>PT3M23S</td>\n",
+       "      <td>public</td>\n",
+       "      <td>['twenty one pilots', 'Twenty One Pilots', 'Bl...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>YouTube</td>\n",
+       "      <td>Watched A chaotic scene unfolded as 25,000 job...</td>\n",
+       "      <td>https://www.youtube.com/watch?v=2X7wem572ws</td>\n",
+       "      <td>Brut India</td>\n",
+       "      <td>2024-07-20 05:30:35.507000+00:00</td>\n",
+       "      <td>YouTube</td>\n",
+       "      <td>YouTube watch history</td>\n",
+       "      <td>2X7wem572ws</td>\n",
+       "      <td>2024-07-20</td>\n",
+       "      <td>2X7wem572ws</td>\n",
+       "      <td>A chaotic scene unfolded as 25,000 job-seekers...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-07-17T06:05:56Z</td>\n",
+       "      <td>UCCgQaXjsJ6EdFPZeTFQoSyw</td>\n",
+       "      <td>Brut India</td>\n",
+       "      <td>72145.0</td>\n",
+       "      <td>1556.0</td>\n",
+       "      <td>PT52S</td>\n",
+       "      <td>public</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>YouTube</td>\n",
+       "      <td>Watched The REALITY of Living in BANGALORE 🏙️ ...</td>\n",
+       "      <td>https://www.youtube.com/watch?v=gbSRMwqPBuI</td>\n",
+       "      <td>Ishan Sharma</td>\n",
+       "      <td>2024-07-20 05:31:29.099000+00:00</td>\n",
+       "      <td>YouTube</td>\n",
+       "      <td>YouTube watch history</td>\n",
+       "      <td>gbSRMwqPBuI</td>\n",
+       "      <td>2024-07-20</td>\n",
+       "      <td>gbSRMwqPBuI</td>\n",
+       "      <td>The REALITY of Living in BANGALORE 🏙️ | Ishan ...</td>\n",
+       "      <td>The REALITY of Living in BANGALORE 🏙️ | Ishan ...</td>\n",
+       "      <td>2024-04-03T10:19:06Z</td>\n",
+       "      <td>UCY6N8zZhs2V7gNTUxPuKWoQ</td>\n",
+       "      <td>Ishan Sharma</td>\n",
+       "      <td>222869.0</td>\n",
+       "      <td>14104.0</td>\n",
+       "      <td>PT42S</td>\n",
+       "      <td>public</td>\n",
+       "      <td>['ishan sharma', 'The REALITY of Living in BAN...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          header                                title_watch_history  \\\n",
+       "0  YouTube Music                          Watched Take Me To Church   \n",
+       "2        YouTube  Watched Memes I Found On The internet🤣 part 50...   \n",
+       "4  YouTube Music                               Watched Stressed Out   \n",
+       "6        YouTube  Watched A chaotic scene unfolded as 25,000 job...   \n",
+       "8        YouTube  Watched The REALITY of Living in BANGALORE 🏙️ ...   \n",
+       "\n",
+       "                                        titleUrl                  subtitles  \\\n",
+       "0  https://music.youtube.com/watch?v=JKlYOUfviXM             Hozier - Topic   \n",
+       "2    https://www.youtube.com/watch?v=wgVNUAm5WOc            Wtf Bro!! Clips   \n",
+       "4  https://music.youtube.com/watch?v=K1FlAphL2p8  Twenty One Pilots - Topic   \n",
+       "6    https://www.youtube.com/watch?v=2X7wem572ws                 Brut India   \n",
+       "8    https://www.youtube.com/watch?v=gbSRMwqPBuI               Ishan Sharma   \n",
+       "\n",
+       "                               time products       activityControls  \\\n",
+       "0  2024-07-20 06:44:15.248000+00:00  YouTube  YouTube watch history   \n",
+       "2  2024-07-20 05:52:12.901000+00:00  YouTube  YouTube watch history   \n",
+       "4  2024-07-20 06:40:52.742000+00:00  YouTube  YouTube watch history   \n",
+       "6  2024-07-20 05:30:35.507000+00:00  YouTube  YouTube watch history   \n",
+       "8  2024-07-20 05:31:29.099000+00:00  YouTube  YouTube watch history   \n",
+       "\n",
+       "      video_id  watch_date           id  \\\n",
+       "0  JKlYOUfviXM  2024-07-20  JKlYOUfviXM   \n",
+       "2  wgVNUAm5WOc  2024-07-20  wgVNUAm5WOc   \n",
+       "4  K1FlAphL2p8  2024-07-20  K1FlAphL2p8   \n",
+       "6  2X7wem572ws  2024-07-20  2X7wem572ws   \n",
+       "8  gbSRMwqPBuI  2024-07-20  gbSRMwqPBuI   \n",
+       "\n",
+       "                                title_video_metadata  \\\n",
+       "0                                  Take Me To Church   \n",
+       "2  Memes I Found On The internet🤣 part 50 #shorts...   \n",
+       "4                                       Stressed Out   \n",
+       "6  A chaotic scene unfolded as 25,000 job-seekers...   \n",
+       "8  The REALITY of Living in BANGALORE 🏙️ | Ishan ...   \n",
+       "\n",
+       "                                         description           publishedAt  \\\n",
+       "0  Provided to YouTube by Universal Music Group\\n...  2018-07-26T02:50:43Z   \n",
+       "2                                                NaN  2023-12-04T14:30:29Z   \n",
+       "4  Provided to YouTube by Fueled By Ramen\\n\\nStre...  2017-02-09T12:10:05Z   \n",
+       "6                                                NaN  2024-07-17T06:05:56Z   \n",
+       "8  The REALITY of Living in BANGALORE 🏙️ | Ishan ...  2024-04-03T10:19:06Z   \n",
+       "\n",
+       "                  channelId               channelTitle    viewCount  \\\n",
+       "0  UCA3Zs9A2IeetfGT3Omi9ivw             Hozier - Topic  154386360.0   \n",
+       "2  UCwZahaEiDZX3uHBF-a6-n9Q            Wtf Bro!! Clips    6741236.0   \n",
+       "4  UCnX0L9QiftAcWdzeBx31xCw  Twenty One Pilots - Topic  450802011.0   \n",
+       "6  UCCgQaXjsJ6EdFPZeTFQoSyw                 Brut India      72145.0   \n",
+       "8  UCY6N8zZhs2V7gNTUxPuKWoQ               Ishan Sharma     222869.0   \n",
+       "\n",
+       "   likeCount duration privacyStatus  \\\n",
+       "0  1307916.0   PT4M2S        public   \n",
+       "2   429123.0     PT1M        public   \n",
+       "4  4263799.0  PT3M23S        public   \n",
+       "6     1556.0    PT52S        public   \n",
+       "8    14104.0    PT42S        public   \n",
+       "\n",
+       "                                                tags  \n",
+       "0            ['Hozier', 'ホージア', 'Take Me To Church']  \n",
+       "2                                                 []  \n",
+       "4  ['twenty one pilots', 'Twenty One Pilots', 'Bl...  \n",
+       "6                                                 []  \n",
+       "8  ['ishan sharma', 'The REALITY of Living in BAN...  "
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_final.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object `st.streamlit.sidebar.input_text` not found.\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# temp = df_final[~df_final['tags'].isna()]\n",
+    "# temp = temp[~temp['tags'].str.contains('[]')]\n",
+    "# temp.head()\n",
+    "\n",
+    "\n",
+    "# Filter out rows where 'tags' is NaN and 'tags' list is not empty\n",
+    "temp = df_final[df_final['tags'].notna()]\n",
+    "temp = temp[~temp['tags'].str.contains(r'\\[\\]', regex=True)]\n",
+    "temp['tags'] = temp['tags'].apply(lambda x: x.replace('[','').replace(']',''))\n",
+    "temp['tags'] = temp['tags'].apply(ast.literal_eval)\n",
+    "temp = temp.explode('tags')\n",
+    "temp.head()\n",
+    "\n",
+    "\n",
+    "\n",
+    "temp_agg = temp.groupby('date').agg(num_of_videos=('video_id',pd.Series.nunique)).reset_index().sort_values(by='num_of_videos',ascending=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp.to_csv('/Users/saisandeep/GitRepo/musical-eureka/YoutubeDataAnalysis/Data/temp_agg.csv',index=False)\n",
+    "\n",
+    "# df_final.to_csv('/Users/saisandeep/GitRepo/musical-eureka/YoutubeDataAnalysis/Data/df_final.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['header', 'title_watch_history', 'titleUrl', 'subtitles', 'time',\n",
+       "       'products', 'activityControls', 'video_id', 'watch_date', 'id',\n",
+       "       'title_video_metadata', 'description', 'publishedAt', 'channelId',\n",
+       "       'channelTitle', 'viewCount', 'likeCount', 'duration', 'privacyStatus',\n",
+       "       'tags'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
