--- a/Kaggle/Main.ipynb
+++ b/Kaggle/Main.ipynb
@@ -2,12 +2,271 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(2260701)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# temp[temp.id==68355089]\n",
+    "# tem.id.value_counts().reset_index().sort_values('count')\n",
+    "temp = pd.read_csv(r'/Users/saisandeep/GitRepo/musical-eureka/Kaggle/Lending_Club/Data/accepted_2007_to_2018Q4.csv')\n",
+    "temp.head(1000).to_csv('/Users/saisandeep/GitRepo/musical-eureka/Kaggle/Lending_Club/Data/Lending_club_sample.csv',index=False)\n",
+    "temp.member_id.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_ = temp.isna().sum().reset_index()\n",
+    "temp_.columns = ['column_name','na_fields']\n",
+    "temp_['pct_NA']= round((temp_['na_fields']/len(temp))*100,2)\n",
+    "# temp_ = temp_[temp_[0]==2260701]\n",
+    "temp_.sort_values('pct_NA',ascending=False,inplace=True)\n",
+    "cols_drop = temp_[temp_['pct_NA']>90].column_name.unique()\n",
+    "\n",
+    "temp.drop(columns=cols_drop,inplace=True)\n",
+    "temp.head(1000).to_csv('/Users/saisandeep/GitRepo/musical-eureka/Kaggle/Lending_Club/Data/Lending_club_sample_removing_null_cols.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "debt_settlement_flag  loan_status                                        \n",
+       "N                     Fully Paid                                             1076746\n",
+       "                      Current                                                 878289\n",
+       "                      Charged Off                                             235288\n",
+       "Y                     Charged Off                                              33271\n",
+       "N                     Late (31-120 days)                                       20562\n",
+       "                      In Grace Period                                           8426\n",
+       "                      Late (16-30 days)                                         4338\n",
+       "                      Does not meet the credit policy. Status:Fully Paid        1988\n",
+       "Y                     Late (31-120 days)                                         905\n",
+       "N                     Does not meet the credit policy. Status:Charged Off        751\n",
+       "                      Default                                                     34\n",
+       "Y                     Current                                                     28\n",
+       "                      Late (16-30 days)                                           11\n",
+       "                      Does not meet the credit policy. Status:Charged Off         10\n",
+       "                      In Grace Period                                             10\n",
+       "                      Default                                                      6\n",
+       "                      Fully Paid                                                   5\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_debt_settlement_flag =temp[['debt_settlement_flag','loan_status']].value_counts().reset_index()\n",
+    "temp_debt_settlement_flag.columns = ['temp_debt_settlement_flag','loan_status','num_of_cust']\n",
+    "temp_debt_settlement_flag.sort_values(['temp_debt_settlement_flag','loan_status'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['id',\n",
+       " 'loan_amnt',\n",
+       " 'funded_amnt',\n",
+       " 'funded_amnt_inv',\n",
+       " 'term',\n",
+       " 'int_rate',\n",
+       " 'installment',\n",
+       " 'grade',\n",
+       " 'sub_grade',\n",
+       " 'emp_title',\n",
+       " 'emp_length',\n",
+       " 'home_ownership',\n",
+       " 'annual_inc',\n",
+       " 'verification_status',\n",
+       " 'issue_d',\n",
+       " 'loan_status',\n",
+       " 'pymnt_plan',\n",
+       " 'url',\n",
+       " 'purpose',\n",
+       " 'title',\n",
+       " 'zip_code',\n",
+       " 'addr_state',\n",
+       " 'dti',\n",
+       " 'delinq_2yrs',\n",
+       " 'earliest_cr_line',\n",
+       " 'fico_range_low',\n",
+       " 'fico_range_high',\n",
+       " 'inq_last_6mths',\n",
+       " 'mths_since_last_delinq',\n",
+       " 'mths_since_last_record',\n",
+       " 'open_acc',\n",
+       " 'pub_rec',\n",
+       " 'revol_bal',\n",
+       " 'revol_util',\n",
+       " 'total_acc',\n",
+       " 'initial_list_status',\n",
+       " 'out_prncp',\n",
+       " 'out_prncp_inv',\n",
+       " 'total_pymnt',\n",
+       " 'total_pymnt_inv',\n",
+       " 'total_rec_prncp',\n",
+       " 'total_rec_int',\n",
+       " 'total_rec_late_fee',\n",
+       " 'recoveries',\n",
+       " 'collection_recovery_fee',\n",
+       " 'last_pymnt_d',\n",
+       " 'last_pymnt_amnt',\n",
+       " 'next_pymnt_d',\n",
+       " 'last_credit_pull_d',\n",
+       " 'last_fico_range_high',\n",
+       " 'last_fico_range_low',\n",
+       " 'collections_12_mths_ex_med',\n",
+       " 'mths_since_last_major_derog',\n",
+       " 'policy_code',\n",
+       " 'application_type',\n",
+       " 'acc_now_delinq',\n",
+       " 'tot_coll_amt',\n",
+       " 'tot_cur_bal',\n",
+       " 'open_acc_6m',\n",
+       " 'open_act_il',\n",
+       " 'open_il_12m',\n",
+       " 'open_il_24m',\n",
+       " 'mths_since_rcnt_il',\n",
+       " 'total_bal_il',\n",
+       " 'il_util',\n",
+       " 'open_rv_12m',\n",
+       " 'open_rv_24m',\n",
+       " 'max_bal_bc',\n",
+       " 'all_util',\n",
+       " 'total_rev_hi_lim',\n",
+       " 'inq_fi',\n",
+       " 'total_cu_tl',\n",
+       " 'inq_last_12m',\n",
+       " 'acc_open_past_24mths',\n",
+       " 'avg_cur_bal',\n",
+       " 'bc_open_to_buy',\n",
+       " 'bc_util',\n",
+       " 'chargeoff_within_12_mths',\n",
+       " 'delinq_amnt',\n",
+       " 'mo_sin_old_il_acct',\n",
+       " 'mo_sin_old_rev_tl_op',\n",
+       " 'mo_sin_rcnt_rev_tl_op',\n",
+       " 'mo_sin_rcnt_tl',\n",
+       " 'mort_acc',\n",
+       " 'mths_since_recent_bc',\n",
+       " 'mths_since_recent_bc_dlq',\n",
+       " 'mths_since_recent_inq',\n",
+       " 'mths_since_recent_revol_delinq',\n",
+       " 'num_accts_ever_120_pd',\n",
+       " 'num_actv_bc_tl',\n",
+       " 'num_actv_rev_tl',\n",
+       " 'num_bc_sats',\n",
+       " 'num_bc_tl',\n",
+       " 'num_il_tl',\n",
+       " 'num_op_rev_tl',\n",
+       " 'num_rev_accts',\n",
+       " 'num_rev_tl_bal_gt_0',\n",
+       " 'num_sats',\n",
+       " 'num_tl_120dpd_2m',\n",
+       " 'num_tl_30dpd',\n",
+       " 'num_tl_90g_dpd_24m',\n",
+       " 'num_tl_op_past_12m',\n",
+       " 'pct_tl_nvr_dlq',\n",
+       " 'percent_bc_gt_75',\n",
+       " 'pub_rec_bankruptcies',\n",
+       " 'tax_liens',\n",
+       " 'tot_hi_cred_lim',\n",
+       " 'total_bal_ex_mort',\n",
+       " 'total_bc_limit',\n",
+       " 'total_il_high_credit_limit',\n",
+       " 'hardship_flag',\n",
+       " 'disbursement_method',\n",
+       " 'debt_settlement_flag']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i for i in temp.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                             0\n",
+       "member_id                2260701\n",
+       "loan_amnt                     33\n",
+       "funded_amnt                   33\n",
+       "funded_amnt_inv               33\n",
+       "                          ...   \n",
+       "settlement_status        2226455\n",
+       "settlement_date          2226455\n",
+       "settlement_amount        2226455\n",
+       "settlement_percentage    2226455\n",
+       "settlement_term          2226455\n",
+       "Length: 151, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
