modified Main ipynb

--- a/Kaggle/Main.ipynb
+++ b/Kaggle/Main.ipynb
@@ -53,34 +53,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>temp_debt_settlement_flag</th>\n",
+       "      <th>loan_status</th>\n",
+       "      <th>num_of_cust</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>N</td>\n",
+       "      <td>Charged Off</td>\n",
+       "      <td>235288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>N</td>\n",
+       "      <td>Current</td>\n",
+       "      <td>878289</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>N</td>\n",
+       "      <td>Default</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>N</td>\n",
+       "      <td>Does not meet the credit policy. Status:Charge...</td>\n",
+       "      <td>751</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>N</td>\n",
+       "      <td>Does not meet the credit policy. Status:Fully ...</td>\n",
+       "      <td>1988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>N</td>\n",
+       "      <td>Fully Paid</td>\n",
+       "      <td>1076746</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>N</td>\n",
+       "      <td>In Grace Period</td>\n",
+       "      <td>8426</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>N</td>\n",
+       "      <td>Late (16-30 days)</td>\n",
+       "      <td>4338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>N</td>\n",
+       "      <td>Late (31-120 days)</td>\n",
+       "      <td>20562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Y</td>\n",
+       "      <td>Charged Off</td>\n",
+       "      <td>33271</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Y</td>\n",
+       "      <td>Current</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Y</td>\n",
+       "      <td>Default</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Y</td>\n",
+       "      <td>Does not meet the credit policy. Status:Charge...</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Y</td>\n",
+       "      <td>Fully Paid</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Y</td>\n",
+       "      <td>In Grace Period</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Y</td>\n",
+       "      <td>Late (16-30 days)</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Y</td>\n",
+       "      <td>Late (31-120 days)</td>\n",
+       "      <td>905</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "debt_settlement_flag  loan_status                                        \n",
-       "N                     Fully Paid                                             1076746\n",
-       "                      Current                                                 878289\n",
-       "                      Charged Off                                             235288\n",
-       "Y                     Charged Off                                              33271\n",
-       "N                     Late (31-120 days)                                       20562\n",
-       "                      In Grace Period                                           8426\n",
-       "                      Late (16-30 days)                                         4338\n",
-       "                      Does not meet the credit policy. Status:Fully Paid        1988\n",
-       "Y                     Late (31-120 days)                                         905\n",
-       "N                     Does not meet the credit policy. Status:Charged Off        751\n",
-       "                      Default                                                     34\n",
-       "Y                     Current                                                     28\n",
-       "                      Late (16-30 days)                                           11\n",
-       "                      Does not meet the credit policy. Status:Charged Off         10\n",
-       "                      In Grace Period                                             10\n",
-       "                      Default                                                      6\n",
-       "                      Fully Paid                                                   5\n",
-       "Name: count, dtype: int64"
+       "   temp_debt_settlement_flag  \\\n",
+       "2                          N   \n",
+       "1                          N   \n",
+       "10                         N   \n",
+       "9                          N   \n",
+       "7                          N   \n",
+       "0                          N   \n",
+       "5                          N   \n",
+       "6                          N   \n",
+       "4                          N   \n",
+       "3                          Y   \n",
+       "11                         Y   \n",
+       "15                         Y   \n",
+       "13                         Y   \n",
+       "16                         Y   \n",
+       "14                         Y   \n",
+       "12                         Y   \n",
+       "8                          Y   \n",
+       "\n",
+       "                                          loan_status  num_of_cust  \n",
+       "2                                         Charged Off       235288  \n",
+       "1                                             Current       878289  \n",
+       "10                                            Default           34  \n",
+       "9   Does not meet the credit policy. Status:Charge...          751  \n",
+       "7   Does not meet the credit policy. Status:Fully ...         1988  \n",
+       "0                                          Fully Paid      1076746  \n",
+       "5                                     In Grace Period         8426  \n",
+       "6                                   Late (16-30 days)         4338  \n",
+       "4                                  Late (31-120 days)        20562  \n",
+       "3                                         Charged Off        33271  \n",
+       "11                                            Current           28  \n",
+       "15                                            Default            6  \n",
+       "13  Does not meet the credit policy. Status:Charge...           10  \n",
+       "16                                         Fully Paid            5  \n",
+       "14                                    In Grace Period           10  \n",
+       "12                                  Late (16-30 days)           11  \n",
+       "8                                  Late (31-120 days)          905  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
